# medical-receipt-organizer

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/solutions/: README.md  _template.md
docs/solutions/build-errors/: forward-reference-in-dataclass.md  python-version-not-released.md
docs/solutions/logic-errors/: code-review-quality-fixes.md
docs/solutions/performance-issues/: image-dpi-normalization-timeout.md
receipt_organizer/: __init__.py  cli.py  extractor.py  models.py  processor.py  renamer.py
tests/: __init__.py  conftest.py  test_cli.py  test_extractor.py  test_models.py  test_processor.py  test_renamer.py
