[project]
name = "receipt-organizer"
version = "0.1.0"
description = "Organize medical receipts using AI-powered extraction with local Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24.0",
    "ollama>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "pre-commit>=3.6.0",
    "ruff>=0.8.0",
]

[project.scripts]
receipt-organizer = "receipt_organizer.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "PTH",    # prefer pathlib
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "-q", "--strict-markers"]
markers = [
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["receipt_organizer"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
